--- a/WebContent/WEB-INF/jdbc.properties
+++ b/WebContent/WEB-INF/jdbc.properties
@@ -6,7 +6,7 @@
 
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://211.47.74.10:3306/dbcsh238ml
-jdbc.username=csh238ml
-jdbc.password=dbsdntkfkd!23
+jdbc.url=jdbc:mysql://211.47.74.10:3306/dbalmtyc?userSSL=true
+jdbc.username=almtyc
+jdbc.password=wjdwotlrdb!23
 	
