--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_ID" version="2.4">
-	<display-name>apt</display-name>
+	<display-name>dataSearch</display-name>
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>apt.root</param-value>
+		<param-value>dataSearch.root</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
@@ -17,14 +17,14 @@
 		<param-value>
 			/WEB-INF/dataAccessContext*.xml
 			/WEB-INF/applicationContext.xml
-			/WEB-INF/batchJob.xml
+<!-- 			/WEB-INF/batchJob.xml -->
 		</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<servlet>
-		<servlet-name>apt</servlet-name>
+		<servlet-name>dataSearch</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -33,7 +33,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>apt</servlet-name>
+		<servlet-name>dataSearch</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 	<session-config>
